# claimification

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_of_marketplace_claude_code.md  VERIFICATION.md  claimification_entwurf.txt  explanation.md  flow.txt  ideas_for_expansion.md  marketplace-metadata.json  mcp_server.py  pyproject.toml  requirements.txt
.claude/: ralph-loop-iteration-1.md  ralph-loop-iteration-2.md  ralph-loop-iteration-3.md
.claude-plugin/: plugin.json
agents/: meeting-intelligence-agent.md
commands/: action-item-extractor.md  audience-adapter.md  claim-extraction.md  commitment-extractor.md  contradiction-detector.md  decision-extractor.md  entity-relationship-mapper.md  evidence-validator.md  meeting-intelligence.md  risk-liability-detector.md  uncertainty-quantificator.md
docs/: INSTALLATION.md  MCP_SERVER_MIGRATION.md  USAGE.md
docs/entity_mapping/: API.md  USAGE.md
docs/plans/: 2026-01-29-entity-relationship-mapper-design.md  2026-01-29-entity-relationship-mapper-implementation.md  2026-01-30-marketplace-package-restructure.md
examples/: basic_usage.py
mcp_servers/: claim_extraction_server.py  entity_mapping_server.py
mcp_servers.old/: claim_extraction_server.py
skills-archive/extract-claims/: SKILL.md
skills/action-item-extractor/: SKILL.md
skills/audience-adapter/: SKILL.md
skills/commitment-extractor/: SKILL.md
skills/contradiction-detector/: SKILL.md
skills/decision-extractor/: SKILL.md
skills/evidence-validator/: SKILL.md
skills/extract-claims/: SKILL.md
skills/meeting-intelligence/: SKILL.md
skills/risk-liability-detector/: SKILL.md
skills/uncertainty-quantification/: SKILL.md
src/: __init__.py  main.py  pipeline.py
src/claim_extraction/: __init__.py
src/claim_extraction/models/: __init__.py  claim.py  result.py  sentence.py
src/claim_extraction/stages/: __init__.py  sentence_splitter.py
src/claimification/: __init__.py  cli.py
src/claimification/claim_extraction/: __init__.py  pipeline.py
src/claimification/entity_mapping/: __init__.py  pipeline.py
src/claimification/mcp_servers/: __init__.py  claim_extraction_server.py  entity_mapping_server.py
src/entity_mapping/: __init__.py  pipeline.py
src/models/: __init__.py  claim.py
src/prompts/: __init__.py  disambiguation.py
src/stages/: decomposition_agent.py  disambiguation_agent.py  selection_agent.py  sentence_splitter.py
tests/: test_imports.py  test_models.py  test_prompts_init.py  test_relationship_extraction_prompts.py
(+21 files in other folders)
