[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimification"
version = "1.0.0"
description = "Extract verifiable factual claims from LLM-generated answers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TwoDigits", email = "info@twodigits.dev"}
]
maintainers = [
    {name = "TwoDigits", email = "info@twodigits.dev"}
]
keywords = [
    "fact-checking",
    "claim-extraction",
    "verification",
    "llm",
    "langchain",
    "ai-safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]
nlp = [
    "spacy>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/TwoDigits/claimification"
Documentation = "https://github.com/TwoDigits/claimification/tree/main/docs"
Repository = "https://github.com/TwoDigits/claimification"
Issues = "https://github.com/TwoDigits/claimification/issues"

[project.scripts]
claimification = "src.main:main"

[tool.setuptools]
packages = ["src", "src.stages", "src.models", "src.prompts", "src.utils"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
